# Learning_LangChain

./: pyproject.toml
1_basic_model_interaction/: 1.1_basic_interaction.py  1.2_messages.py  1.3_chat_history.py  1.4_firebase_interaction.py
2_prompt_template/: 2.1_prompt_template_basics.py
3_chains/: 3.1_chain_basics.py  3.2_runnable_lambda.py  3.3_parallel_chains.py  3.4_branching.py
4_RAG/: 4.1_vector_store_creation.py  4.2_as_retreiver.py  4.3_conversational.py
4_RAG/db/chroma_db/: chroma.sqlite3
4_RAG/wikipedia_articles/: formula1.txt
5_agents/: 5.1_basics.py  5.2_conversational_ReAct.py
